--- a/softgroup/pom.xml
+++ b/softgroup/pom.xml
@@ -33,6 +33,12 @@
 
 			<dependency>
 				<groupId>com.softgroup</groupId>
+				<artifactId>authorization-impl</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>com.softgroup</groupId>
 				<artifactId>common-datamapper</artifactId>
 				<version>${project.version}</version>
 			</dependency>
@@ -94,6 +100,16 @@
 
 	<dependencies>
 		<!-- COMMON -->
+		<dependency>
+			<groupId>com.softgroup</groupId>
+			<artifactId>authorization-api</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.softgroup</groupId>
+			<artifactId>authorization-impl</artifactId>
+		</dependency>
+
 
 		<!-- usefullies -->
 		<dependency>
