--- a/softgroup/pom.xml
+++ b/softgroup/pom.xml
@@ -55,6 +55,12 @@
 				<version>${project.version}</version>
 			</dependency>
 
+			<dependency>
+				<groupId>com.softgroup</groupId>
+				<artifactId>common-factory</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
 			<!-- SPRING -->
 			<dependency>
 				<groupId>org.springframework</groupId>
@@ -110,6 +116,10 @@
 			<artifactId>authorization-impl</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.softgroup</groupId>
+			<artifactId>common-factory</artifactId>
+		</dependency>
 
 		<!-- usefullies -->
 		<dependency>
