add data request/response

--- a/softgroup/services/pom.xml
+++ b/softgroup/services/pom.xml
@@ -15,6 +15,7 @@
 
 		<module>authorization</module>
         <module>profile</module>
+        <module>messenger</module>
     </modules>
 
 	<properties>
