--- a/softgroup/basis/common-router/common-router-api/pom.xml
+++ b/softgroup/basis/common-router/common-router-api/pom.xml
@@ -1,21 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>services</artifactId>
+        <artifactId>common-router</artifactId>
         <groupId>com.softgroup</groupId>
         <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>profile</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>common-router-api</artifactId>
+    <packaging>jar</packaging>
 
-    <name>profile</name>
-
-    <modules>
-        <module>profile-api</module>
-        <module>profile-impl</module>
-    </modules>
+    <name>common-router-api</name>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -23,10 +18,5 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>com.softgroup</groupId>
-            <artifactId>profile-api</artifactId>
-            <version>${project.version}</version>
-        </dependency>
     </dependencies>
 </project>
