--- a/softgroup/basis/common-router/pom.xml
+++ b/softgroup/basis/common-router/pom.xml
@@ -3,13 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
+    <modules>
+        <module>common-router-api</module>
+		<module>common-router-impl</module>
+	</modules>
+    <parent>
 		<groupId>com.softgroup</groupId>
 		<artifactId>basis</artifactId>
 		<version>0.0.1</version>
 	</parent>
 	<artifactId>common-router</artifactId>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
