--- a/softgroup/basis/pom.xml
+++ b/softgroup/basis/pom.xml
@@ -18,6 +18,11 @@
 
     </modules>
 
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
     <dependencies>
 
         <dependency>
