--- a/softgroup/pom.xml
+++ b/softgroup/pom.xml
@@ -15,7 +15,10 @@
 		<module>basis</module>
 	</modules>
 
+
 	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<spring.core.version>4.2.5.RELEASE</spring.core.version>
