--- a/softgroup/services/authorization/pom.xml
+++ b/softgroup/services/authorization/pom.xml
@@ -16,6 +16,12 @@
         <module>authorization-impl</module>
     </modules>
 
+	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+
+
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
