--- a/softgroup/services/messenger/pom.xml
+++ b/softgroup/services/messenger/pom.xml
@@ -17,6 +17,11 @@
         <module>messenger-impl</module>
     </modules>
 
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
